# Lattice

./: .gitignore  Dockerfile  README.md  idea.md  pyproject.toml  skills-lock.json  update_db.py  update_providers.py
lattice/: __init__.py  cli.py  rules_parser.py  server.py  streaming.py
lattice/agent/: __init__.py  graph.py  state.py
lattice/cache/: __init__.py  base_cache.py  redis_manager.py
lattice/connectors/: __init__.py  base_llm.py  base_search.py  providers_llm.py  providers_search.py
lattice/database/: __init__.py  connection.py  models.py  repository.py
static/: app.js  index.css  index.html  lattice-bg.js  rules.md
tests/: test_agent.py  test_connectors.py  test_database.py  test_server.py  test_sse.py
